deploying live 2